Modificações modulos AngularJS
Adição do controller e serviço para testes de adição de usuário

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,13 @@
     <script src="bower_components/Chart.js/Chart.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <!-- GENSEQ 
+    <script src="scripts/genseq.module.js"></script>
+    <script src="scripts/genseq.servicos.js"></script>
+    <script src="scripts/controllers/genseq.controllers.js"></script>
+    <!--<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <!-- endGENSEQ -->
     
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
