atualizacao sistema e kitdeplecao

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -13,19 +13,26 @@
                         class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" collapse="collapseVar!=5">
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.cadastrar_servico"><i class="fa fa-gear fa-fw"></i> Novo Serviço</a>
+						<a ui-sref="dashboard.servicos"><i class="fa fa-gear fa-fw"></i> Serviço</a>
 					</li>
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.cadastrar_sistema"><i class="fa fa-desktop fa-fw"></i> Novo Sistema</a>
+						<a ui-sref="dashboard.sistemas"><i class="fa fa-desktop fa-fw"></i> Sistema</a>
 					</li>
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.cadastrar_kit_deplecao"><i class="fa fa-search fa-fw"></i> Novo Kit Depleção</a>
-					</li>
-					<li ui-sref-active="active">
-						<a ui-sref="dashboard.cadastrar_status_amostra"><i class="fa fa-tag fa-fw"></i> Novo Status Amostra</a>
+						<a ui-sref="dashboard.kit_deplecao"><i class="fa fa-search fa-fw"></i> Kit Depleção</a>
 					</li>
 				</ul>
 			</li>
+			<li ui-sref-active="active">
+                <a ui-sref="dashboard.projetos"><i class="fa fa-folder-open fa-fw"></i> Projetos</a>
+            </li>
+			<li ui-sref-active="active">
+                <a ui-sref="dashboard.amostras"><i class="fa fa-flask  fa-fw"></i> Amostras</a>
+            </li>
+			<li ui-sref-active="active">
+                <a ui-sref="dashboard.corridas"><i class="fa fa-flag-checkered fa-fw"></i> Corridas</a>
+            </li>
+
             <li ui-sref-active="active">
 
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
