--- a/app/scripts/directives/header/header-notification/header-notification.html
+++ b/app/scripts/directives/header/header-notification/header-notification.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-top-links navbar-right">
+<ul class="nav navbar-top-links navbar-right" ng-controller="MainCtrl as vm">
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -200,7 +200,7 @@
             </li>
             <li><a href="http://www.strapui.com/"><i class="fa fa-eye fa-fw"></i> Premium Angular Themes</a></li>
             <li class="divider"></li>
-            <li><a ui-sref="login"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+            <li><a  ng-click="vm.logout()"><i class="fa fa-sign-out fa-fw"></i> Logouts</a>
             </li>
         </ul>
         <!-- /.dropdown-user -->
